objects/FW_Service_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>CertificateName__c</fullName>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificatePassword__c</fullName>
        <label>Certificate Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <label>Certificate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compressed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndPointParameters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EndPoint Parameters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HeaderName__c</fullName>
        <label>Header Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputClass__c</fullName>
        <label>Input Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogWithCallout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log With Callout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutputClass__c</fullName>
        <label>Output Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingClass__c</fullName>
        <label>Processing Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FW_Service_REST</fullName>
                    <default>true</default>
                    <label>FW_Service_REST</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FW Service Settings</label>
    <pluralLabel>FW Service Settings</pluralLabel>
</CustomObject>